--- a/style.css
+++ b/style.css
@@ -36,6 +36,100 @@ header {
   color: #fff;
   position: sticky;
   top: 0;
+  z-index: var(--z-index);
+}
+
+/* Nav Close and Open */
+.nav__logo,
+.nav__burger,
+.nav__close{
+  color: white;
+}
+
+.nav__toggle{
+  position: relative;
+  width: 32px;
+  height: 32px;
+}
+
+.nav__burger,
+.nav__close{
+  position: absolute;
+  width: max-content;
+  height: max-content;
+  inset: 0;
+  margin: auto;
+  font-size: 1.25rem;
+  cursor: pointer;
+  transition: opacity .1s, transform .4s;
+}
+
+.nav__close{
+  opacity: 0;
+}
+
+/* Navigation for Mobile devices */
+@media screen and (max-width: 1118px){
+  .nav__menu{
+    position: absolute;
+    left: 0;
+    top: 5.5rem;
+    width: 100%;
+    height: calc(100vh - 3.5rem);
+    overflow: auto;
+    pointer-events: none;
+    opacity: 0;
+    transition: top .4s, opacity .3s;
+  }
+  .nav__menu::-webkit-scrollbar{
+    width: 0;
+  }
+  .nav__link{
+  color: white;
+  padding: 1.25rem 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: background-color .3s;
+  }
+  .nav__list {
+     background-color: #033e68;
+    padding-top: 1rem;
+    display: grid;
+  }
+  .nav__link:hover{
+    background-color: #0077cc;
+  }
+}
+
+/* Navigation for Larger Devices */
+@media screen and (min-width: 1118px) {
+  .show-icon, .nav__burger, .nav__close{
+    opacity: 0;
+  }
+  header nav ul {
+  list-style: none;
+  display: flex;
+  padding-left: 23rem;
+  gap: 1.5rem;
+}
+
+}
+
+.show-menu{
+  opacity: 1;
+  top: 5.5rem;
+  pointer-events: initial;
+}
+
+.show-icon .nav__burger{
+  opacity: 0;
+  transform: rotate(90deg);
+}
+
+.show-icon .nav__close{
+  opacity: 1;
+  transform: rotate(90deg);
 }
 
 header img{
@@ -52,12 +146,6 @@ header nav {
   max-width: 1100px;
   margin: 0 auto;
   padding: 1rem;
-}
-
-header nav ul {
-  list-style: none;
-  display: flex;
-  gap: 1.5rem;
 }
 
 header nav ul li a {
@@ -356,30 +444,4 @@ footer {
 
 .footer-socials a:hover{
   color: #00bfff;
-}
-
-/* Responsive Nav (mobile) */
-@media (max-width: 768px) {
-  header nav {
-    flex-direction: column;
-  }
-
-  header nav ul {
-    flex-direction: column;
-    gap: 1rem;
-    margin-top: 1rem;
-  }
-
-  .hero-buttons {
-    flex-direction: column;
-    gap: 1rem;
-  }
-}
-
-/* Responsive grids for smaller screens */
-@media (max-width: 480px) {
-  .service-list,
-  .projects {
-    grid-template-columns: 1fr;
-  }
 }
