--- a/BrittonWeb/public/style.css
+++ b/BrittonWeb/public/style.css
@@ -11,10 +11,10 @@ body {
   color: #333;
   background-color: #f9f9f9;
   min-height: 100vh;
-  max-width: 100rem;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 a {
@@ -50,6 +50,7 @@ header {
   position: relative;
   width: 32px;
   height: 32px;
+  display: none;
 }
 
 .nav__burger,
@@ -86,19 +87,23 @@ header {
   }
   .nav__link{
   color: white;
-  padding: 1.25rem 1.5rem;
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   transition: background-color .3s;
   }
   .nav__list {
-     background-color: #033e68;
+    background-color: #033e68;
     padding-top: 1rem;
-    display: grid;
+    display: grid;  
   }
   .nav__link:hover{
     background-color: #0077cc;
+  }
+
+  .nav__toggle{
+    display: flex;
   }
 }
 
@@ -110,7 +115,6 @@ header {
   header nav ul {
   list-style: none;
   display: flex;
-  padding-left: 23rem;
   gap: 1.5rem;
 }
 
@@ -143,8 +147,6 @@ header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1100px;
-  margin: 0 auto;
   padding: 1rem;
 }
 
@@ -413,33 +415,21 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
-  flex-wrap: wrap;
+  padding: 1rem;
 }
 
-.footer-logo,
-.footer-copy,
-.footer-socials {
-  display: flex;
-  align-items: center;
-}
 
-.footer-logo img{
+footer img{
   height: auto;
+
 }
 
-.footer-copy{
-  flex: 1;
-  justify-content: center;
-  text-align: center;
-  font-size: 0.9rem;
-}
 
 .footer-socials a{
   color: white;
-  margin-left: 1rem;
   text-decoration: none;
   transition: color 0.3s;
+  padding: 1rem;
 }
 
 .footer-socials a:hover{
