--- a/BrittonWeb/templates/services.html
+++ b/BrittonWeb/templates/services.html
@@ -1,35 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services | BrittonWeb</title>
-  <meta name="description" content="Explore BrittonWeb's website services including 1-page sites, full business sites, and monthly maintenance packages.">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
- <header>
-    <nav>
-        <a href="/index.html" >
-          <img src="/images/HeaderWhiteLogo.png" alt="BrittonWeb" width="180" height="60">
-        </a>
-        <div class="nav__menu" id="nav-menu">
-          <ul class ="nav__list">
-            <li><a href="/index.html" class="nav__link">Home</a></li>
-            <li><a href="/about.html" class="nav__link">About</a></li>
-            <li><a href="/services.html" class="nav__link">Services</a></li>
-            <li><a href="/portfolio.html" class="nav__link">Portfolio</a></li>
-            <li><a href="/quote.html" class="nav__link">Get a Quote</a></li>
-            <li><a href="/contact.html" class="nav__link">Contact</a></li>
-          </ul>
-        </div>
-        <div class="nav__toggle" id="nav-toggle">
-          <i class="ri-menu-line nav__burger"></i>
-          <i class="ri-close-line nav__close"></i>
-        </div>
-      </nav>
-  </header>
+{% extends "base.html" %}
+
+{% block content %}
+
   <div class="hero">
     <h2>Website Packages & Pricing</h2>
   </div>
@@ -86,23 +58,8 @@
           </ul>
         </div>
       <br>
-        <p><a href="/quote.html" class="cta">Start Your Project</a></p>
+        <p><a href="/quote" class="cta">Start Your Project</a></p>
       </div>
     </section>
   </main>
-
-  <footer>
-    <div class="footer-logo">
-      <img src="/images/HeaderWhiteLogo.png" height="60" width="180">
-    </div>
-    <div class="footer-copy">
-      <p>&copy; 2025 BrittonWeb</p>
-    </div>
-    <div class="footer-socials">
-      <a href="/contact.html">Contact</a>
-      <a href="https://github.com/lelandbritton">GitHub</a>
-    </div>
-  </footer>
-  <script src="main.js"></script>
-</body>
-</html>
+{% endblock content %}
