possible fix to forms

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,10 @@
         </div>
       </nav>
   </header>
+
   <main role="main" > {% block content %} {% endblock content %} </main>
 
-    <footer>
+  <footer>
     <div class="footer-logo">
       <img src="/images/HeaderWhiteLogo.png" height="40" width="120">
     </div>
@@ -44,4 +45,4 @@
       <a href="/contact">Contact</a>
       <a href="https://github.com/lelandbritton">GitHub</a>
   </footer>
-  <script src="main.js"></script>
+  <script src="navbar.js"></script>
