--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
   <main>
     <section class="contact-form">
       <div class="container">
-        <form name="contact" method="POST" data-netlify="true">
+        <form id="contact" method="POST" data-netlify="true" action="/thanks">
           <input type="hidden" name="form-name" value="contact">
 
           <label for="name">Your Name</label>
