--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <title>BrittonWeb | Custom Websites</title>
   <meta name="description" content="BrittonWeb builds fast, SEO-friendly, mobile-responsive websites for small businesses in Sterling, Kansas and beyond.">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header>
@@ -45,4 +45,4 @@
       <a href="/contact">Contact</a>
       <a href="https://github.com/lelandbritton">GitHub</a>
   </footer>
-  <script src="/static/navbar.js"></script>
+  <script src="/navbar.js"></script>
