--- a/templates/services.html
+++ b/templates/services.html
@@ -20,7 +20,8 @@
               <li>SEO-ready</li>
               <li>Deployed and live</li>
             </ul>
-            <p class="price">$200 flat</p>
+          <br>
+            <a href="/package-1" class="cta">$200 flat</a>
           </div>
 
           <div class="service">
@@ -32,7 +33,8 @@
               <li>SEO optimization</li>
               <li>Speed & accessibility tuned</li>
             </ul>
-            <p class="price">$450 flat</p>
+            <br>
+            <a href="/package-2" class="cta">$450 flat</a>
           </div>
 
           <div class="service">
@@ -44,10 +46,13 @@
               <li>Minor design changes</li>
               <li>Ongoing support</li>
             </ul>
+            <br>
             <p class="price">$40/month</p>
           </div>
         </div>
 
+        <br>
+        
         <div class="extras">
           <h3>What’s Always Included</h3>
           <ul>
