Calculator Added Button

--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -45,7 +45,12 @@
     <strong>Estimated One-Time Cost: $<span id="oneTimeCost">0</span></strong><br>
     <strong>Estimated Monthly Cost: $<span id="monthlyCost">0</span></strong>
   </form>
+  <br><br>
+  <center>
+      <a href="/quote" class="cta">Get Your Quote!</a>
+  </center>
 </section>
+
 
 <script>
   const websiteSize = document.getElementById('websiteSize');
