--- a/templates/quote.html
+++ b/templates/quote.html
@@ -25,7 +25,7 @@
           <label for="business">Business Name</label>
           <input type="text" id="business" name="business" required>
 
-          <label for="budget">budget</label>
+          <label for="budget">Budget</label>
           <input type="number" id="budget" name="budget" min="40" max="10000" required>
 
           <label for="goals">What Do You Need?</label>
